# ChangeLog for app-admin/eselect-ctags
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-ctags/ChangeLog,v 1.10 2008/05/13 10:52:12 ulm Exp $

*eselect-ctags-1.4 (13 May 2008)

  13 May 2008; Ulrich Mueller <ulm@gentoo.org> +eselect-ctags-1.4.ebuild:
  Version bump.

  23 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> eselect-ctags-1.3.ebuild:
  Keyword ~mips for bug #202947.

  20 Jan 2008; Christoph Mende <angelos@gentoo.org>
  eselect-ctags-1.3.ebuild:
  Stable on amd64 wrt bug #206089

  19 Jan 2008; nixnut <nixnut@gentoo.org> eselect-ctags-1.3.ebuild:
  Stable on ppc wrt bug 206089

  18 Jan 2008; Brent Baude <ranger@gentoo.org> eselect-ctags-1.3.ebuild:
  Marking eselect-ctags-1.3 ppc64 for bug 206089

  17 Jan 2008; Jeroen Roovers <jer@gentoo.org> eselect-ctags-1.3.ebuild:
  Stable for HPPA (bug #206089).

  16 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  eselect-ctags-1.3.ebuild:
  stable x86, bug 206089

  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> eselect-ctags-1.3.ebuild:
  alpha/ia64/sparc stable wrt #206089

*eselect-ctags-1.3 (21 Dec 2007)

  21 Dec 2007; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
  +eselect-ctags-1.3.ebuild:
  Initial import. Split off from eselect-emacs to make vi users happy.
