@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/eselect-ctags
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-ctags/ChangeLog,v 1.10 2008/05/13 10:52:12 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-ctags/ChangeLog,v 1.11 2008/05/25 17:25:29 ulm Exp $
+
+*eselect-ctags-1.5 (25 May 2008)
+
+  25 May 2008; Ulrich Mueller <ulm@gentoo.org> -eselect-ctags-1.4.ebuild,
+  +eselect-ctags-1.5.ebuild:
+  Version bump.
 
 *eselect-ctags-1.4 (13 May 2008)
 
